<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textColor="#4d4d4d"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014" />

    <EditText
        android:id="@+id/editTextCurrentEmail2"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:autofillHints="Example@email.com"
        android:ems="10"
        android:hint="@string/current_email"
        android:inputType="textEmailAddress"
        android:textColorHint="#4d4d4d"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/editTextCurrentPassword2"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        android:textColorHint="#4d4d4d"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCurrentEmail2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:ems="10"
        android:hint="@string/new_password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:textColorHint="#4d4d4d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCurrentPassword2" />

    <EditText
        android:id="@+id/editTextConfirmNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:ems="10"
        android:hint="@string/confirm_new_password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:textColorHint="#4d4d4d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewPassword" />

    <Button
        android:id="@+id/btnConfirmPasswordChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:text="@string/confirm"
        android:background="@color/secondaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmNewPassword"
        app:layout_constraintVertical_bias="0.75" />
</androidx.constraintlayout.widget.ConstraintLayout>