<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTodoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:background="@drawable/wave_path"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/editTextTodo"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:autofillHints="@string/new_text_hint"
        android:ems="10"
        android:hint="@string/new_text_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#4d4d4d"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:background="@drawable/new_todo_button"
        android:text="@string/button_todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateLayout" />

    <LinearLayout
        android:id="@+id/dateLayout"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTodo">

        <EditText
            android:id="@+id/editTextMonth"
            android:layout_width="70dp"
            android:layout_height="48dp"
            android:autofillHints="@string/month"
            android:ems="10"
            android:hint="@string/month"
            android:inputType="number"
            android:textColorHint="#4d4d4d"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTodo" />

        <EditText
            android:id="@+id/editTextDay"
            android:layout_width="70dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/day"
            android:autofillHints="@string/day"
            android:textColorHint="#4d4d4d"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextMonth" />

        <EditText
            android:id="@+id/editTextYear"
            android:layout_width="70dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/year"
            android:autofillHints="@string/year"
            android:textColorHint="#4d4d4d"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDay" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>