<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

    <TextView
        android:id="@+id/textViewForgotPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002" />

    <EditText
        android:id="@+id/editTextForgotPasswordEmail"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/current_email"
        android:inputType="textEmailAddress"
        android:textColorHint="#4d4d4d"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewForgotPasswordTitle"
        app:layout_constraintVertical_bias="0.26999998"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/sendPasswordResetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:background="@color/secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextForgotPasswordEmail" />
</androidx.constraintlayout.widget.ConstraintLayout>